# HPPA

./: .gitattributes  .gitignore  README.md
cache/: CMakeLists.txt
cache/libs/: CMakeLists.txt
cache/libs/benchmark/: CMakeLists.txt
cache/libs/benchmark/src/: benchmark.cpp
cache/libs/benchmark/tests/: benchmark_test.cpp
cache/libs/cache/: CMakeLists.txt
cache/libs/cache/include/cache/: cache.hpp
cache/libs/cache/src/: cache.cpp
cache/libs/cache/tests/: CMakeLists.txt  cache_test.cpp
cache/src/: CMakeLists.txt  main.cpp
image-processing/: CMakeLists.txt
image-processing/cmake/: HunterGate.cmake
image-processing/libs/: CMakeLists.txt
image-processing/libs/benchmark/: CMakeLists.txt
image-processing/libs/benchmark/include/benchmark/: benchmark-gpu.hpp  benchmark.hpp
image-processing/libs/benchmark/src/: benchmark.cpp
image-processing/libs/benchmark/tests/: benchmark_test.cpp
image-processing/libs/filters/include/filters/: embossing-filter.cuh  embossing-filter.hpp  filter.cuh  kekw-filter.cuh  laplace-filter.cuh  laplace-filter.hpp
image-processing/libs/filters/include/filters/kernels/: filter-operator-grayscale.cuh  filter-operator-rgb.cuh  filter-operator.cuh  launcher.cuh
image-processing/libs/filters/src/: filter.cu  laplace-filter.cu
image-processing/libs/filters/src/kernels/: filter-operator-grayscale.cu  filter-operator-rgb.cu  filter-operator.cu  grayscale.cu  laplace.cu
image-processing/libs/filters/tests/: CMakeLists.txt  filter_test.cpp
image-processing/libs/image/: CMakeLists.txt
image-processing/libs/image/include/image/: image-grayscale-cpu.hpp  image-grayscale.cuh  image-grayscale.hpp  image-rgb-cpu.hpp  image.cuh  image.hpp
image-processing/libs/image/include/image/helpers/: helper_image.h
image-processing/libs/image/include/image/kernels/: filter.cuh  launcher-grayscale.cuh
image-processing/libs/image/src/: image-grayscale-cpu.cpp  image-grayscale.cpp  image-grayscale.cu  image-rgb-cpu.cpp  image.cpp  image.cu
image-processing/libs/image/src/kernels/: filter.cu  launcher-grayscale.cu  launcher-rgb.cu  launcher.cu
image-processing/libs/image/tests/: CMakeLists.txt  image_grayscale_test.cpp  image_rgb_test.cpp  image_test.cpp
image-processing/libs/loader/: CMakeLists.txt
image-processing/libs/loader/include/loader/: loader.hpp
image-processing/libs/loader/src/: loader.cpp
image-processing/libs/loader/tests/: loader_test.cpp
image-processing/libs/matrix/: CMakeLists.txt
image-processing/libs/matrix/include/matrix/: benchmark.cuh  matrix-cpu.hpp  matrix.hpp
image-processing/libs/matrix/include/matrix/kernels/: processing.cuh  random.cuh  shared.cuh
image-processing/libs/matrix/src/: matrix-cpu.cpp  matrix-gpu.cu  matrix.cpp
image-processing/libs/matrix/src/kernels/: processing.cu  random.cu  shared.cu
image-processing/libs/matrix/tests/: CMakeLists.txt  matrix_cpu_test.cpp  matrix_gpu_test.cpp
image-processing/libs/utils/: CMakeLists.txt
image-processing/libs/utils/include/utils/: error_check.hpp  results_exact_check.hpp
image-processing/libs/utils/include/utils/helpers/: helper_border.hpp  helper_image.hpp
image-processing/libs/utils/src/helpers/: helper_border_rgb.cpp
image-processing/libs/utils/tests/: CMakeLists.txt  helper_image_test.cpp
image-processing/src/: CMakeLists.txt  main.cpp
matrix-processing/: .gitignore  (+1 more)
mpi-processing/: .clang-format  CMakeLists.txt  make.sh  run.sh
mpi-processing/cmake/: HunterGate.cmake
mpi-processing/libs/: CMakeLists.txt
mpi-processing/libs/benchmark/include/benchmark/: benchmark.hpp
mpi-processing/libs/benchmark/src/: benchmark-gpu.cpp
mpi-processing/libs/benchmark/tests/: CMakeLists.txt
mpi-processing/libs/filters/: CMakeLists.txt
mpi-processing/libs/filters/include/filters/: embossing-filter.cuh  prewitt-filter.cuh
mpi-processing/libs/filters/tests/: filter_test.cpp
mpi-processing/libs/image/: CMakeLists.txt
mpi-processing/libs/image/include/image/: image-grayscale-cpu.hpp  image-grayscale.hpp  image-rgb-cpu.hpp  image-rgb.hpp  image.hpp
mpi-processing/libs/image/src/: image-grayscale-cpu.cpp  image-grayscale.cpp  image-rgb-cpu.cpp  image-rgb.cpp
mpi-processing/libs/image/src/kernels/: launcher-grayscale.cu
mpi-processing/libs/image/tests/: CMakeLists.txt  image_grayscale_test.cpp  image_rgb_test.cpp
mpi-processing/libs/loader/tests/: CMakeLists.txt
mpi-processing/libs/utils/: CMakeLists.txt
mpi-processing/libs/utils/include/utils/: results_eps_check.hpp
mpi-processing/libs/utils/src/helpers/: helper_border_grayscale.cpp  helper_border_rgb.cpp
mpi-processing/libs/utils/tests/: helper_image_test.cpp
mpi-processing/src/: CMakeLists.txt  executor.hpp  main.cpp
vectorization/: CMakeLists.txt  conanfile.txt
vectorization/libs/benchmark/: CMakeLists.txt
vectorization/libs/benchmark/include/benchmark/: benchmark.hpp
vectorization/libs/benchmark/src/: benchmark.cpp
vectorization/libs/benchmark/tests/: CMakeLists.txt  test_benchmark.cpp
vectorization/libs/matrix/: CMakeLists.txt
vectorization/libs/matrix/include/matrix/: cached_matrix.hpp  matrix.hpp  parent_matrix.hpp  standard_matrix.hpp  vectorized_matrix.hpp
vectorization/libs/matrix/src/: cached_matrix.cpp  matrix.cpp  parent_matrix.cpp  standard_matrix.cpp  vectorized_matrix.cpp
vectorization/libs/matrix/tests/: CMakeLists.txt  test_cached_matrix.cpp  test_matrix.cpp  test_parent_matrix.cpp  test_standard_matrix.cpp  test_vectorized_matrix.cpp
vectorization/src/: CMakeLists.txt  main.cpp
vectorization/src/auto_vectorized/: CMakeLists.txt  auto_vectorized.cpp
vectorization/src/cached_vectorized/: CMakeLists.txt  cached_vectorized.cpp
vectorization/src/manual_vectorized/: CMakeLists.txt  manual_vectorized.cpp
vectorization/src/non_vectorized/: CMakeLists.txt  non_vectorized.cpp
vectorization/tests/: CMakeLists.txt  test_intrinsics_vectorization.cpp  test_matrix_common.cpp  test_standard_vectorization.cpp  test_vectorization.cpp  test_vectorization.hpp
vectorization/tests/non_vectorized/: CMakeLists.txt  test_non_vectorized.cpp
(+26 files in other folders)
